--- a/Laboratorium 1/ex2/Zad2.html
+++ b/Laboratorium 1/ex2/Zad2.html
@@ -236,7 +236,7 @@
     </script>
 </head>
 <body onload="init()">
-<h2>Lab 2, Exercise 2: Mousing</h2>
+<h2>Lab 1, Exercise 2</h2>
 <noscript>
     <p>JavaScript is required to use this page.</p>
 </noscript>
