--- a/Laboratorium 1/ex1/Zad1.html
+++ b/Laboratorium 1/ex1/Zad1.html
@@ -225,7 +225,7 @@
 </head>
 <body onload="init()"> 
 
-<h2>CS 424, Lab 2, Exercise 1</h2>
+<h2>Lab 1, Exercise 1</h2>
 
 <noscript>
 <p>JavaScript is required to use this page.</p>
